fix alignment

--- a/Styles.css
+++ b/Styles.css
@@ -78,6 +78,7 @@ th {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "CCData Plots Plots PlotButtons" "PLCControls PLCControls MiscButtonsMain MiscButtonsMain";
+    padding-bottom: 2%;
 }
 
 .areaColor {
@@ -132,15 +133,18 @@ th {
 
 .CCDataState {
     display: inline-flex;
-    margin-left: 2%;
+    margin-left: 5%;
+    margin-top: 30%;
     /* background: tomato; */
     vertical-align: middle;
     font-size: 1.1em;
+    font-weight: bold;
     color: whitesmoke;
 }
 
 .ActiveCCData {
-    margin-left: 10%;
+    margin-left: 5%;
+    margin-top: 30%;
     height: 20px;
     width: 20px;
     float: left;
@@ -149,12 +153,19 @@ th {
 }
 
 .InActiveCCData {
-    margin-left: 10%;
+    margin-left: 5%;
+    margin-top: 30%;
     height: 20px;
     width: 20px;
     float: left;
     background: rgb(255, 0, 0);
     border: 1px rgb(0, 0, 0) solid;
+}
+.CCData button{
+    margin: auto;
+    margin-left: 5%;
+    margin-top:5%;
+    display: block;
 }
 
 .PlotsMain {
@@ -239,7 +250,7 @@ th {
 
 .TagsState {
     display: inline-flex;
-    margin-left: 2%;
+    margin-left:5%;
     margin-top: 10%;
     /* background: tomato; */
     vertical-align: middle;
@@ -249,7 +260,7 @@ th {
 }
 
 .ActiveTags {
-    margin-left: 10%;
+    margin-left: 5%;
     margin-top: 10%;
     height: 20px;
     width: 20px;
@@ -259,7 +270,7 @@ th {
 }
 
 .InActiveTags {
-    margin-left: 10%;
+    margin-left: 5%;
     margin-top: 10%;
     height: 20px;
     width: 20px;
@@ -267,7 +278,12 @@ th {
     background: rgb(255, 0, 0);
     border: 1px rgb(0, 0, 0) solid;
 }
-
+.InActiveTags+button{
+    margin: auto;
+    margin-left: 5%;
+    margin-top:5%;
+    display: block;
+}
 .MiscButtonsMain {
     grid-area: MiscButtonsMain;
     display: grid;
@@ -372,4 +388,9 @@ input::-webkit-input-placeholder {
 .submitted {
     width: 90%;
     margin: auto;
+}
+
+.submitted p{
+    width: 90%;
+    margin: 3% 2%;
 }
